# asmoses

./: CMakeLists.txt  README.md
examples/example-ant/: CMakeLists.txt  ant_scoring.h  moses-ant-hillclimbing.cc  moses-ant-particleswarm.cc
lib/: ASMosesConfig.cmake.in  CMakeLists.txt  FindAtomSpace.cmake
moses/: CMakeLists.txt
moses/atomese/: CMakeLists.txt
moses/atomese/interpreter/: CMakeLists.txt  Interpreter.cc  Interpreter.h  logical_interpreter.h
moses/atomese/reduct/: CMakeLists.txt  reduct.cc  reduct.h
moses/atomese/representation/: CMakeLists.txt  atomese_representation.cc  atomese_representation.h  load_table.cc
moses/combo/: CMakeLists.txt
moses/combo/ant_combo_vocabulary/: ant_action_symbol.cc  ant_action_symbol.h  ant_builtin_action.cc  ant_builtin_action.h  ant_combo_vocabulary.h  ant_indefinite_object.cc  ant_indefinite_object.h  ant_operator.h  ant_perception.cc  ant_perception.h
moses/combo/combo/: action.h  action_symbol.h  argument.h  assumption.h  builtin_action.h  combo.h  convert_ann_combo.h  descriptions.h  indefinite_object.h  iostream_combo.cc  iostream_combo.h  operator_base.h  perception.h  procedure_call.h  procedure_repository.h  similarity.cc  similarity.h  simple_nn.h  vertex.h
moses/combo/converter/: CMakeLists.txt  combo_atomese.cc  combo_atomese.h
moses/combo/crutil/: exception.h
moses/combo/main/: CMakeLists.txt  tree-sim.cc
moses/combo/type_checker/: type_tree.cc  type_tree.h
moses/comboreduct/: CMakeLists.txt
moses/comboreduct/atomese_representation/: CMakeLists.txt  atomese_representation.cc  atomese_representation.h
moses/comboreduct/combo/: combo.h  vertex.cc  vertex.h
moses/comboreduct/converter/: combo_atomese.cc  combo_atomese.h
moses/comboreduct/main/: CMakeLists.txt  action-reductor.cc  gen-table.cc
moses/comboreduct/man/: CMakeLists.txt
moses/comboreduct/reduct/: logical_rules.cc
moses/comboreduct/table/: table.cc  table.h  table_io.cc  table_io.h
moses/cython/opencog/: CMakeLists.txt
moses/data/: CMakeLists.txt
moses/data/main/: CMakeLists.txt  eval-table.h  gen-table.cc
moses/data/representation/: CMakeLists.txt  load_table.cc
moses/data/table/: CMakeLists.txt  table.cc  table.h  table_io.cc  table_io.h
moses/feature-selection/: CMakeLists.txt
moses/feature-selection/algo/: deme_optimize.h
moses/feature-selection/main/: CMakeLists.txt  eval-features.cc  eval-features.h  feature-selection.cc  fs-main.cc
moses/feature-selection/man/: CMakeLists.txt
moses/feature-selection/scorers/: fs_scorer_base.h  moses_matrix.h  moses_optim.h  mutual_info.h
moses/moses/: CMakeLists.txt
moses/moses/deme/: deme_expander.cc  deme_expander.h  deme_params.h  feature_selector.cc  feature_selector.h
moses/moses/main/: CMakeLists.txt  demo-problems.cc  eval-candidate-likelihood.cc  eval-candidate.cc  eval-diversity.cc  moses_exec_def.h  populate_atomspace.cc  populate_atomspace.h  problem-params.cc  problem-params.h  problem.cc  problem.h  table-problems.cc  table-problems.h
moses/moses/man/: CMakeLists.txt
moses/moses/metapopulation/: ensemble.cc  metapopulation.h
moses/moses/moses/: complexity.cc  complexity.h  moses_main.cc  moses_main.h  partial.h  types.h
moses/moses/representation/: build_knobs.cc  build_knobs.h  instance_scorer.cc  instance_scorer.h  knobs.cc  knobs.h  representation.cc  representation.h
moses/moses/scoring/: behave_cscore.cc  behave_cscore.h  bscores.cc  bscores.h  discriminating_bscore.h  precision_bscore.cc  scoring_base.cc  scoring_base.h  select_bscore.h  time_dispersion.cc
moses/pleasure/main/: main.cpp
moses/pleasure/pleasure/: generation_table.hpp  node_list.hpp  population.hpp
moses/reduct/: CMakeLists.txt
moses/reduct/main/: CMakeLists.txt  action-reductor.cc  contin-reductor.cc  full-reductor.cc  interactive-reductor.cc  logical-reductor.cc  mixed-reductor.cc  perception-reductor.cc
moses/reduct/reduct/: CMakeLists.txt  action_reduction.cc  ann_reduction.cc  clean_reduction.cc  contin_reduction.cc  flat_normal_form.h  fold_reduction.cc  full_reduction.cc  logical_reduction.cc  mixed_reduction.cc  perception_reduction.cc  reduct.h
moses/reduct/rules/: CMakeLists.txt  action_rules.cc  action_rules.h  ann_rules.h  branch_rules.cc  branch_rules.h  contin_rules.cc  contin_rules.h  fold_rules.h  general_rules.cc  general_rules.h  logical_rules.cc  logical_rules.h  meta_rules.cc  meta_rules.h  mixed_rules.cc  mixed_rules.h  perception_rules.cc  perception_rules.h
moses/utils/: CMakeLists.txt
opencog/: CMakeLists.txt
opencog/asmoses/: CMakeLists.txt  README.md
opencog/asmoses/atomese/: CMakeLists.txt  README.md
opencog/asmoses/combo/: CMakeLists.txt
opencog/asmoses/cython/: CMakeLists.txt  README.md
opencog/asmoses/data/: CMakeLists.txt
opencog/atomese/: CMakeLists.txt
opencog/combo/: CMakeLists.txt
opencog/data/: CMakeLists.txt
opencog/feature-selection/: CMakeLists.txt
opencog/moses/: CMakeLists.txt  diary-performance-2.txt  diary-performance.txt
opencog/reductURE/: CMakeLists.txt  reduct.scm  utilities.scm
opencog/reducture/: reduct.scm  utilities.scm
opencog/urereduct/: CMakeLists.txt  README.md  reduct.scm  utilities.scm
opencog/utils/: CMakeLists.txt  valueUtils.h  value_key.h
tests/moses/: AntUTest.cxxtest  CMakeLists.txt  CompleteTruthTableUTest.cxxtest  KnobTurningUTest.cxxtest  atomese_logicalUTest.cxxtest  completeTruthTableUTest.cxxtest  logical-data.csv  logical-data2.csv  logical_bscore_UTest.cxxtest  moses-framework.h  representationUTest.cxxtest  scoringUTest.cxxtest  selectionUTest.cxxtest
tests/reduct/: ANNReductUTest.cxxtest  ActionReductUTest.cxxtest  BooleanFullUTest.cxxtest  BooleanReductUTest.cxxtest  CMakeLists.txt  ContinReductUTest.cxxtest  FoldReductUTest.cxxtest  FullReductUTest.cxxtest  MixedReductUTest.cxxtest  PerceptionReductUTest.cxxtest
tests/utils/: CMakeLists.txt  GenTableUTest.cxxtest  KLDUTest.cxxtest  comprehensionUTest.cxxtest  iostreamContainerUTest.cxxtest  lazy_selectorUTest.cxxtest  lru_cacheUTest.cxxtest  out.csv  rankingUTest.cxxtest  test.scm  test2.scm
(+686 files in other folders)
